--- a/src/app/component/operations-list/operations-list.component.html
+++ b/src/app/component/operations-list/operations-list.component.html
@@ -20,117 +20,148 @@
   <div class="spacer-4"></div>
   <div class="container">
     <div class="row g-3">
-      <div class="col-12 col-lg-6">
+      <div class="col-12 col-lg-12">
         <div class="row g-3 align-items-center">
-          <div class="col-2">
-            <div class="text-body-secondary">Cliente:</div>
-          </div>
-          <div class="col-10">
-            <input type="text" class="form-control" aria-label="nombre de usuario" [value]="customer.name" readonly>
-          </div>
-          <div class="col-2">
-            <div class="text-body-secondary">Deuda:</div>
-          </div>
-          <div class="col-10">
-            <div class="input-group">
-              <span class="input-group-text">S/.</span>
-              <input type="number" class="form-control" aria-label="deuda de usuario" value="200" readonly>
-            </div>
-          </div>
           <div class="col-6">
             <div class="form-floating">
-              <input type="date" class="form-control" aria-label="fecha de inicio" value="2024-03-12" readonly>
+              <input type="text" class="form-control" aria-label="nombre de cliente" [value]="this.customer.name" readonly>
+              <label>Nombre de cliente</label>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="form-floating">
+              <input type="number" class="form-control" aria-label="DNI de cliente" [value]="this.customer.dni" readonly>
+              <label>DNI</label>
+            </div>
+          </div>
+
+          <div class="col-3">
+            <div class="form-floating">
+              <input type="date" class="form-control" aria-label="fecha de registro de cliente" [value]="this.customer.payment_date" readonly>
+              <label>Fechad de registro</label>
+            </div>
+          </div>
+
+          <div class="col-3">
+            <div class="form-floating">
+              <input type="number" class="form-control" aria-label="telefono" [value]="this.customer.phone" readonly>
+              <label>Telefono</label>
+            </div>
+          </div>
+
+          <div class="col-3">
+            <div class="form-floating">
+              <input type="number" class="form-control" aria-label="pagos pendientes" [value]="pendient_payments" readonly>
+              <label>Pagos pendientes</label>
+            </div>
+          </div>
+
+          <div class="col-3">
+            <div class="form-floating input-group">
+              <input type="number" class="form-control" aria-label="deuda total" [value]="total_debt.toFixed(2)" readonly>
+              <label>Deuda total</label>
+              <span class="input-group-text">S/.</span>
+            </div>
+          </div>
+
+          <div class="col-3">
+            <div class="form-floating input-group">
+              <input type="number" class="form-control" aria-label="limite de credito del cliente" [value]="credit_limit.toFixed(2)" readonly>
+              <label>Limite de credito</label>
+              <span class="input-group-text">S/.</span>
+            </div>
+          </div>
+
+          
+          <!-- <div class="col-3">
+            <div class="form-floating input-group">
+              <input type="number" class="form-control" aria-label="siguiente pago total" [value]="" readonly>
+              <label>Siguiente pago (total)</label>
+              <span class="input-group-text">S/.</span>
+            </div>
+          </div>
+          
+          <div class="col-8"></div> -->
+          <div class="col-12"></div>
+
+          <div class="col-6">
+            <select class="form-select" [(ngModel)]="selected_option" aria-label="seleccionar si registrar compra o registrar pago">
+              <option value="1">Compras</option>
+              <option value="2">Pagos</option>
+            </select>
+          </div>
+
+          <div class="col-3">
+            <div class="form-floating">
+              <input type="date" class="form-control" placeholder="" aria-label="fecha de inicio" [(ngModel)]="date_beg" (change)="get_customer_operations()">
               <label>Fecha de inicio</label>
             </div>
           </div>
-          <div class="col-6">
+
+          <div class="col-3">
             <div class="form-floating">
-              <input type="date" class="form-control" aria-label="fecha de fin" value="2024-06-12" readonly>
+              <input type="date" class="form-control" aria-label="fecha de fin" [(ngModel)]="date_end" (change)="get_customer_operations()">
               <label>Fecha de fin</label>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="col-12 col-lg-6">
-        <div class="row align-items-center g-3">
-          <div class="col-4">
-            <div class="text-body-secondary">Siguiente pago:</div>
-          </div>
-          <div class="col-8">
-            <input type="date" class="form-control" aria-label="siguiente fecha de pago" value="2002-12-12" readonly>
-          </div>
-          <div class="col-4">
-            <div class="text-body-secondary">Tipo de crédito:</div>
-          </div>
-          <div class="col-8">
-            <input type="text" class="form-control" aria-label="tipo de credito aplicado al cliente" value="Anualidad simple" readonly>
-          </div>
-          <div class="col-4">
-            <div class="text-body-secondary">Monto del sgt. pago:</div>
-          </div>
-          <div class="col-8">
-            <div class="input-group">
-              <span class="input-group-text">S/.</span>
-              <input type="number" class="form-control" aria-label="siguiente monto de pago" value="30" readonly>
-            </div>
-          </div>
-        </div>
-      </div>
+      
     </div>
 
     <div class="spacer-3"></div>
-
-    <!---->
-    <div class="col-12">
-      <select class="form-select" [(ngModel)]="selectedOption" aria-label="seleccionar si registrar compra o registrar pago">
-        <option value="1">Compras</option>
-        <option value="2">Pagos</option>
-      </select>
-    </div>
-    <div class="spacer-3"></div>
-    <!---->
 
     <!-- Tabla de Compras -->
-      <div *ngIf="selectedOption === '1'" class="col-12">
+      <div *ngIf="this.selected_option == 1" class="col-12" style="max-height: 50vh; overflow-y: auto;">
         <table class="table text-center">
           <thead class="table-warning align-middle">
             <tr>
-              <th scope="col" class="text-uppercase col-1">ID operación</th>
-              <th scope="col" class="text-uppercase col-2">Fecha</th>
-              <th scope="col" class="text-uppercase col-2">Detalle</th>
-              <th scope="col" class="text-uppercase col-2">Monto total</th>
+              <th scope="col" class="text-uppercase col-1">ID</th>
+              <th scope="col" class="text-uppercase col-1">Fecha</th>
+              <th scope="col" class="text-uppercase col-4">Detalle</th>
+              <th scope="col" class="text-uppercase col-2">Tipo de credito</th>
+              <th scope="col" class="text-uppercase col-2">Valor</th>
+              <th scope="col" class="text-uppercase col-2">Estado</th>
             </tr>
           </thead>
           <tbody class="align-middle">
-            <tr *ngFor="let purchase of purchases">
-              <td>{{ purchase.id }}</td>
-              <td>{{ purchase.date | date: 'dd/MM/yyyy' }}</td>
-              <td class="text-start">{{ purchase.detail }}</td>
-              <td>S/. {{ purchase.value }}</td>
+            <tr *ngFor="let item of purchases">
+              <td>{{item.id}}</td>
+              <!-- <td>{{item.date | date: "dd/MM/yyyy"}}</td> -->
+              <td>{{item.date.toLocaleDateString()}}</td>
+              <td class="text-start">{{item.detail}}</td>
+              <td>{{(item.type_of_credit == 1) ? "Valor futuro" : "Anualidad vencida"}}</td>
+              <td class="text-center">S/. {{item.value.toFixed(2)}}</td>
+              <td>{{item.status ? "Pagado" : "Pendiente"}}</td>
             </tr>
-
           </tbody>
         </table>
       </div>
 
     <!-- Tabla de Pagos -->
-      <div *ngIf="selectedOption === '2'" class="col-12">
+      <div *ngIf="selected_option == 2" class="col-12" style="max-height: 50vh; overflow-y: auto;">
         <table class="table text-center">
           <thead class="table-warning align-middle">
             <tr>
-              <th scope="col" class="text-uppercase col-1">ID operación</th>
+              <th scope="col" class="text-uppercase col-1">ID</th>
               <th scope="col" class="text-uppercase col-2">Fecha</th>
               <th scope="col" class="text-uppercase col-2">Interés</th>
               <th scope="col" class="text-uppercase col-2">Amortización</th>
+              <th scope="col" class="text-uppercase col-2">Valor</th>
+              <th scope="col" class="text-uppercase col-2">Estado</th>
             </tr>
           </thead>
           <tbody class="align-middle">
-            <tr *ngFor="let payment of payments">
-              <td>{{ payment.id }}</td>
-              <td>{{ payment.date | date: 'dd/MM/yyyy' }}</td>
-              <td>S/. {{ payment.interest }}</td>
-              <td>S/. {{ payment.amortization }}</td>
+            <tr *ngFor="let item of payments">
+              <td>{{ item.id }}</td>
+              <td>{{ item.date | date: 'dd/MM/yyyy' }}</td>
+              <td>S/. {{item.interest.toFixed(2)}}</td>
+              <td>S/. {{item.amortization.toFixed(2)}}</td>
+              <td>S/. {{item.value.toFixed(2)}}</td>
+              <td>
+                <button type="button" class="btn" [ngClass]="{'btn-warning': !item.status, 'btn-secondary': item.status}" [disabled]="item.status">{{item.status ? "Pagado" : "Pagar"}}</button>
+              </td>
             </tr>
 
           </tbody>
