chore(comments): validations that need to be evaluated

--- a/src/app/component/customer-register/customer-register.component.html
+++ b/src/app/component/customer-register/customer-register.component.html
@@ -35,7 +35,7 @@
             <input type="date" class="form-control" placeholder="Fecha de pago" aria-label="fecha de pago" [(ngModel)]="new_customer.payment_date">
           </div>
           <div class="col-12">
-            <button type="submit" class="btn btn-primary w-100" (click)="register_user()">Registrar</button>
+            <button type="submit" class="btn btn-warning w-100" (click)="register_user()">Registrar</button>
           </div>  
         </div>
       </div>
