--- a/src/app/component/customer-register/customer-register.component.html
+++ b/src/app/component/customer-register/customer-register.component.html
@@ -6,10 +6,10 @@
         <img src="../../assets/images/BodegaLucia002.png" class="object-fit-scale" alt="Logo de Bodega Lucia" style="height: 4rem;">
       </div>
       <div class="col col-auto">
-        <div class="display-6 fw-medium">Bodega Lucia</div>
+        <div class="display-6 fw-medium">Registrar cliente</div>
       </div>
       <div class="col col-auto">
-        <button type="menu" class="btn btn-outline-secondary"><i class="fa-solid fa-bars" style="width: 5rem;"></i></button>
+        <button type="menu" class="btn btn-outline-secondary" [routerLink]="['/caja']"><i class="fa-solid fa-home" style="width: 5rem;"></i></button>
       </div>
     </div>
     <div class="row spacer-3"></div>
@@ -23,19 +23,27 @@
       <div class="col-12 col-md-8">
         <div class="row gy-4">
           <div class="col-12">
-            <input type="text" class="form-control" placeholder="Nombre completo" aria-label="nombre completo" [(ngModel)]="new_customer.name">
+            <div class="form-floating">
+              <input type="text" class="form-control" placeholder="Nombre completo" aria-label="nombre completo" [(ngModel)]="new_customer.name">
+            <label>Nombre completo</label>
+            </div>
           </div>
           <div class="col-12">
-            <input type="number" class="form-control" placeholder="Telefono" aria-label="telefono" [(ngModel)]="new_customer.phone">
+            <div class="form-floating">
+              <input type="number" class="form-control" placeholder="Telefono" aria-label="telefono" [(ngModel)]="new_customer.phone">
+              <label>Telefono</label>
+            </div>
           </div>
-          <div class="col.12">
+          <div class="col.12 form-floating">
             <input type="number" class="form-control" placeholder="DNI" aria-label="dni" [(ngModel)]="new_customer.dni">
+            <label>DNI</label>
           </div>
-          <div class="col-12">
-            <input type="date" class="form-control" placeholder="Fecha de pago" aria-label="fecha de pago" [(ngModel)]="new_customer.payment_date">
+          <div class="col-12 form-floating">
+            <input type="date" class="form-control" placeholder="Fecha de pago" aria-label="fecha de pago" [min]="min_date | date: 'yyyy-MM-dd'" [max]="max_date | date: 'yyyy-MM-dd'" [(ngModel)]="new_customer.payment_date">
+            <label>Fecha de pago</label>
           </div>
-          <div class="col-12">
-            <button type="submit" class="btn btn-warning w-100" (click)="register_user()">Registrar</button>
+          <div class="col-12 form-floating">
+            <button type="submit" class="btn btn-warning w-100" (click)="register_customer()">Registrar</button>
           </div>  
         </div>
       </div>
