--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -9,7 +9,7 @@
         <div class="display-6 fw-medium">Bodega Lucia</div>
       </div>
       <div class="col col-auto">
-        <button type="menu" class="btn btn-outline-secondary"><i class="fa-solid fa-bars" style="width: 5rem;"></i></button>
+        <button type="menu" class="btn btn-outline-secondary" [routerLink]="['/configuracion']"><i class="fa-solid fa-gear" style="width: 5rem;"></i></button>
       </div>
     </div>
     <div class="row spacer-3"></div>
