--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -8,9 +8,7 @@
       <div class="col col-auto">
         <div class="display-6 fw-medium">Bodega Lucia</div>
       </div>
-      <div class="col col-auto">
-        <button type="menu" class="btn btn-outline-secondary" [routerLink]="['/configuracion']"><i class="fa-solid fa-gear" style="width: 5rem;"></i></button>
-      </div>
+      <div class="col col-2"></div>
     </div>
     <div class="row spacer-3"></div>
   </div>
